--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,5 +1,9 @@
-header {
-    background-color: #FF0000;
-    height: 70px;
+footer {
+    background-color:  #00FF00;
+    height: 60px;
     width: 100%;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+
 }
